--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -1,7 +1,6 @@
 .wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
   margin: 24px auto 0 auto;
 }
 
@@ -40,5 +39,16 @@
 
   &--selected {
     background: rgba(255, 255, 255, 0.4);
+  }
+}
+
+.info {
+  padding: 24px;
+  list-style: none;
+  font-size: 20px;
+  user-select: none;
+
+  span {
+    color: green;
   }
 }
